main.tf
provider "aws" {
  region = "ap-south-1"
}

resource "aws_vpc" "myapp-vpc" {
  cidr_block = var.vpc_cidr_blocks
  tags = {
    Name = "${var.env_prefix}-vpc"
  }
}

module "myapp-subnet" {
  source = "./modules/subnet"
  subnet_cidr_blocks = var.subnet_cidr_blocks
  avail_zone =var.avail_zone
  env_prefix = var.env_prefix
  vpc_id = aws_vpc.myapp-vpc.id
}

module "myapp-webserver" {
  source = "./modules/webserver"
  my_ip = var.my_ip
  ami_name = var.ami_name
  env_prefix = var.env_prefix
  vpc_id = aws_vpc.myapp-vpc.id
  public_key_location = var.public_key_location
  instance_type = var.instance_type
  avail_zone = var.avail_zone
  subnet_id=module.myapp-subnet.subnet.id
}

output "instance_ip" {
  value = module.myapp-webserver.instance_details.public_ip
}
